# Blackhole

./: .gitignore  .gitmodules  .sourceme  CMakeLists.txt  README.md
src/: main.cpp
